--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='polyfrontpage.web.app'"
               >
                 Github
               </button>
