--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="poly.png"
+                src="p1.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -304,13 +304,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='polyfrontpage.web.app'"
+                onclick="location.href='https://polyfrontpage.web.app/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://polyfrontpage.web.app/'"
               >
                 Live Demo
               </button>
