--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='polyfrontpage.web.app'"
+                onclick="location.href= polyfrontpage.web.app"
               >
                 Live Demo
               </button>
@@ -295,7 +295,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="project-2.png"
+                src="p2.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -319,7 +319,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="project-3.png"
+                src="p1.png"
                 alt="Project 3"
                 class="project-img"
               />
