--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='polyfrontpage.web.app'"
+                onclick="location.href='https://polyfrontpage.web.app/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href= polyfrontpage.web.app"
+                onclick="location.href='https://polyfrontpage.web.app/'"
               >
                 Live Demo
               </button>
