--- a/index.html
+++ b/index.html
@@ -304,13 +304,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://polyfrontpage.web.app/'"
+                onclick="location.href='https://gpsrinagar.web.app/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://polyfrontpage.web.app/'"
+                onclick="location.href='https://gpsrinagar.web.app/'"
               >
                 Live Demo
               </button>
