--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section id="profile">
       <div class="section__pic-container">
-        <img src="1.jpg" alt="John Doe profile picture" />
+        <img src="3.png" alt="Jaydeep Shah" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
