--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <div class="details-container">
             <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
-              <article>
+<!--               <article>
                 <img
                   src="checkmark.png"
                   alt="Experience icon"
@@ -219,7 +219,7 @@
                   <p>Intermediate</p>
                 </div>
               </article>
-              <article>
+              <article> -->
                 <img
                   src="checkmark.png"
                   alt="Experience icon"
