--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                   <h3>VueJS</h3>
                   <p>Intermediate</p>
                 </div>
-              </article>
-              <article> -->
+              </article>-->
+              <article> 
                 <img
                   src="checkmark.png"
                   alt="Experience icon"
