--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('resume_jaydeep.pdf')"
+            onclick="window.open('Resumeblue.pdf')"
           >
             Download CV
           </button>
