--- a/index.html
+++ b/index.html
@@ -252,6 +252,19 @@
                   <p>Intermediate</p>
                 </div>
               </article>
+
+
+              <article>
+                <img
+                  src="checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MongoDB</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
             </div>
           </div>
         </div>
