--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav id="desktop-nav" class="nav">
-      <div class="logo"><a href="#profile"></> JaydeepShah</a></div>
+      <div class="logo"><a href="#profile"><span></></span>JaydeepShah</a></div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
