--- a/index.html
+++ b/index.html
@@ -353,6 +353,31 @@
               </button>
             </div>
           </div>
+
+           <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="p3.png"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Jaydeepshah84/ImageSearch'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://jaydeepshah84.github.io/ImageSearch/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
         </div>
       </div>
       <img
