--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
            <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="p3.png"
-                alt="Project 3"
+                src="p4.png"
+                alt="Project 4"
                 class="project-img"
               />
             </div>
@@ -366,13 +366,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Jaydeepshah84/ImageSearch'"
+                onclick="location.href='https://demoagenc.web.app/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://jaydeepshah84.github.io/ImageSearch/'"
+                onclick="location.href='https://demoagenc.web.app/'"
               >
                 Live Demo
               </button>
