--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="article-container">
               <img
                 src="p1.png"
-                alt="Project 1"
+                alt="Front Page Builder"
                 class="project-img"
               />
             </div>
@@ -309,7 +309,7 @@
             <div class="article-container">
               <img
                 src="p2.png"
-                alt="Project 2"
+                alt="GP Srinagar"
                 class="project-img"
               />
             </div>
@@ -333,7 +333,7 @@
             <div class="article-container">
               <img
                 src="p3.png"
-                alt="Project 3"
+                alt="Image Search Engine"
                 class="project-img"
               />
             </div>
@@ -358,7 +358,7 @@
             <div class="article-container">
               <img
                 src="p4.png"
-                alt="Project 4"
+                alt="Agency UI"
                 class="project-img"
               />
             </div>
