--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Front Page Builder</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -313,7 +313,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">GP Srinagar</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -337,7 +337,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Image Search Engine</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -362,7 +362,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Agency UI</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
